# ci_cd_sandbox

./: .travis.yml  CMakeLists.txt  conanfile.py  main.cpp  ping_test.cpp
include/: ping.hpp
src/: ping.cpp
